feat(): csrf protection added

--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -24,6 +24,7 @@
                 {{if .AuthenticatedUser}}
                     <a href='/user/profile'>Profile</a>
                     <form action='/user/logout' method='POST'>
+                        <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
                         <button>Logout</button>
                     </form>
                 {{else}}
